--- a/assets/apps/findform/index.html
+++ b/assets/apps/findform/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h2><code>find</code> command builder</h2>
+                <h2><code>find</code> form app</h2>
                 <br />
                 <form class="form-horizontal">
 
@@ -78,7 +78,7 @@
                                                 <li><code>*</code> - matches zero or more characters</li>
                                                 <li><code>?</code> - matches exactly one character</li>
                                                 <li><code>[abcd]</code> - matches any character in group</li>
-                                                <li><code>[^ab]</code> - matches any character that is NOT in group</li>
+                                                <li><code>[!ab]</code> - matches any character that is NOT in group</li>
                                                 <li><code>[a-zA-Z]</code> - you may use character ranges inside <code>[]</code>
                                             </ul>
                                         </p>
