--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Programming is Magic
-cover: 'assets/images/cover1.jpg'
+cover: 'assets/images/start2.jpg'
 class: 'home-template'
 navigation: True
 logo: 'assets/images/home.png'
