--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Programming is Magic
+title: Finding The Way Home
 cover: 'assets/images/start2.jpg'
 class: 'home-template'
 navigation: True
